# ETU_labs

./: README.md
EVM_organization/lb2/: Korenev_Danil_lb2.odt  LB2.ASM  LB2.LST
EVM_organization/lb3/: LB3.LST  LB3.asm
EVM_organization/lb4/: LB4.cpp
EVM_organization/lb5/: LB5.LST  LB5.asm  LB5T.asm
EVM_organization/lb6/: count.asm  main.cpp
algorithms_and_data_structures/Coursework/: main.py
algorithms_and_data_structures/Heapsort/: Heapsort.py
algorithms_and_data_structures/Korenev_Danil_lb2/: mergeSort.py
algorithms_and_data_structures/Korenev_Danil_lb4/: main.py  tests.py
construction_and_analysis_of_algorithms/: main.cpp
construction_and_analysis_of_algorithms/backtracking/: backtracking.py
construction_and_analysis_of_algorithms/lab_2/: Astar.kt  Hungry.kt
construction_and_analysis_of_algorithms/lab_3/: Generator.kt  Main.kt  Voyageur.kt
object_oriented_programming/: CMakeLists.txt
object_oriented_programming/Korenev_Danil_lb1/src/: CMakeLists.txt
object_oriented_programming/Korenev_Danil_lb1/src/Background/: Cell.cpp  Cell.h  CellGrass.cpp  CellGrass.h  CellPlayer.cpp  CellPlayer.h  CellView.cpp  CellView.h  CellWall.cpp  CellWall.h  Event.h  Field.cpp  Field.h  FieldView.cpp  FieldView.h  TrapEventBanana.cpp  TrapEventBanana.h  TrapEventJoker.cpp  TrapEventJoker.h
object_oriented_programming/Korenev_Danil_lb1/src/Characters/: Player.cpp  Player.h
object_oriented_programming/Korenev_Danil_lb1/src/Runtime/: CommandReader.cpp  CommandReader.h  Controller.cpp  Controller.h  Mediator.cpp  Mediator.h  MediatorObject.h  main.cpp
(+579 files in other folders)
